--- a/nonebot_plugin_mcsmanager/templates/server_list.md.jinja
+++ b/nonebot_plugin_mcsmanager/templates/server_list.md.jinja
@@ -11,6 +11,6 @@
 - 服务器类型 {{server.config.type}}
 - 启动指令 {{server.config.startCommand}}
 - 创建日期 {{server.config.createDatetime}}
-- 上次启用 {{{server.config.lastDatetime}}
+- 上次启用 {{server.config.lastDatetime}}
 - 启动次数 {{server.config.started}}
 {% endfor %}
